Upgrade to ElasticSearch 2.1. [refs #106653404]
Also, make config more sensible [refs #83511352]